--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "vsots",
   "license": "ISC",
   "dependencies": {
+    "isomorphic-dompurify": "^2.20.0",
     "nodemon": "^3.1.9"
   }
 }
