--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "isomorphic-dompurify": "^2.20.0",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9"
   }
 }
