--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "isomorphic-dompurify": "^2.20.0",
-    "nodemailer": "^6.9.16",
+    "nodemailer": "^6.9.16"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.9"
   }
 }
