--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "vsots",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "isomorphic-dompurify": "^2.20.0",
     "nodemailer": "^6.9.16"
   },
