--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "server": "nodemon index.js"
+    "server": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "vsots",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.7",
-    "isomorphic-dompurify": "^2.20.0",
+    "form-text-sanitizer": "^1.0.2",
     "nodemailer": "^6.9.16"
   },
   "devDependencies": {
